# Batch-Serving-ML-Pipeline

./: .gitignore  Makefile  README.md  data_flow.py  dvc.yaml  monitor_flow.py  pred_flow.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  refresh_dashboard.yml  trigger_data_flow.yml  trigger_monitor_flow.yml  trigger_pred_flow.yml
app/api_data/: README.md  data_models.py  weather_data_flows.py
app/inference/: README.md  forecast.py  prepare_daily_data.py
app/monitoring/: README.md  performance_monitoring.py
app/train/: README.md  evaluate.py  extract_data.py  split_data.py  train.py
conf/: params.yaml
forecasting_dashboard_app/: README.md  app.py  ploomber-cloud.json  requirements.txt
forecasting_dashboard_app/pages/: monitoring_service.py  weather_forecasting_service.py
forecasting_dashboard_app/serve/: monitoring.py  weather_forecasting.py
results/evaluate/: metrics.json
results/train/: tuning_results.json
scripts/: linting.sh
weather_data/: .gitignore  test.dvc  train.dvc
weather_data/raw/: .gitignore  data_22_1_20.csv.dvc  data_daily_22_1_20.csv.dvc
weather_data/test/: .gitignore  test_daily.csv.dvc  test_hourly.csv.dvc  test_weather_daily_data.csv
weather_data/train/: .gitignore  train_daily.csv.dvc  train_hourly.csv.dvc  train_weather_daily_data.csv
